--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,13 +16,13 @@
       <div class="col-md-4-mb-10 mt-3 itenNav">
           <nav class="nav nav-pills nav-fill">
           <a type="button" class="btn btn-link" id="cadastro" data-toggle="modal" data-target="#modalCadastro">Cadastre-se</a>
-          <button type="button"  data-toggle="modal" data-target="#modalExemplo" class="btn btn-outline-dark">Entrar</button>
+          <button type="button"  data-toggle="modal" data-target="#modalLogin" class="btn btn-outline-dark">Entrar</button>
           </nav>
           </div>
           
   </div>
   <!-- Modal -->
-  <div class="modal fade" id="modalExemplo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  <div class="modal fade" id="modalLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
