--- a/src/app/quemsomos/quemsomos.component.html
+++ b/src/app/quemsomos/quemsomos.component.html
@@ -1,11 +1,33 @@
-
-   
+<div class="row">
+        <div class="col-md-12">
+            <nav class="navbar navbar-expand-lg navbar-transparent ">
+    
+                    <a [routerLink]="'/home'" class="titulo"><strong><h2> Click<strong>In</strong> </h2> </strong></a>
+    
+                <a class="nav-link" [routerLink]="'/contato'">Contato</a>
+                <a class="nav-link" [routerLink]="'/embaixadores'">Embaixadores </a>
+                <a class="nav-link" [routerLink]="'/faq'">FAQs</a>
+                
+                
+                <a type="button" class="btn btn-link" id="cadastro" data-toggle="modal"
+                    data-target="#modalCadastro">Cadastre-se</a>
+                <button type="button" data-toggle="modal" data-target="#modalExemplo"
+                    class="btn btn-outline-dark">Entrar</button>
+            </nav>
+    
+        </div>
+    
+    
+    </div>
+        <div class="col-md-2">
+      
+        </div>
+      
         <div class="container-fluid">
-            <h3>Quem Somos</h3>
             <div class= "row mt-5">
                 <div class="col-md-2"></div>
                 <div class="col-md-8" id="margem">
-                <p> O clickIn tem como foco estimular a inclusão de PDC’s no mercado de trabalho e o acesso a informações e atualidades do meio. Viabilizada a conexão entre empregadores e profissionais PCDs da-se na busca por mapear e entender quais são as necessidades e requisitos para incluir essa população nas empresas. A partir de entrevistas e pesquisas, foram coletadas histórias, impressões, dados sobre esse público. Num segundo momento, como parte do projeto, vídeos foram gravados para dar visibilidade a história dos nossos embaixadores que exemplificam os desafios dos profissionais a ingressar no mercado. O objetivo do projeto é, de um lado, mostrar como à falta de inclusão e representatividade, e também estimular referências positivas.
+                <p>O <strong>ClickIn</strong> tem como foco estimular a inclusão de PDC’s no mercado de trabalho e o acesso a informações e atualidades do meio. Viabilizada a conexão entre empregadores e profissionais PCDs da-se na busca por mapear e entender quais são as necessidades e requisitos para incluir essa população nas empresas. A partir de entrevistas e pesquisas, foram coletadas histórias, impressões, dados sobre esse público. Num segundo momento, como parte do projeto, vídeos foram gravados para dar visibilidade a história dos nossos embaixadores que exemplificam os desafios dos profissionais a ingressar no mercado. O objetivo do projeto é, de um lado, mostrar como à falta de inclusão e representatividade, e também estimular referências positivas.
                     </p>
                     </div>
                 <div class="col-md-2"></div>    
@@ -118,3 +140,28 @@
             </div>
         </div>
     </div>
+
+
+    <hr>
+    <!--<footer class="footer">-->
+            <div class="container mb-3">
+                    <div class="row">
+                        <div class="col-md-12 kl">
+                            <div id="textorodape" class="navbar-text">
+                                <strong>ClickIn&reg;</strong>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row ">
+    
+                        <div class="col-md-12 ">
+                            <ul class="social ">
+                                <li><a href="http://facebook.com/">Facebook</a></li>
+                                <li><a href="https://twitter.com/">Twitter</a></li>
+                                <li><a href="http://instagram.com/">Instagram</a></li>
+                            </ul>
+    
+                        </div>
+                    </div>
+                </div>
+                <!--</footer>-->
