--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
 <div class="container-fluid">
-<app-navbar></app-navbar>
+<!--<app-navbar></app-navbar>-->
 <router-outlet></router-outlet>
 </div>
