--- a/src/app/contato/contato.component.css
+++ b/src/app/contato/contato.component.css
@@ -1,9 +1,3 @@
-
-
-p{
-    text-align: justify;
-}
-
 .tamanho-img{
     width: 100px;
     height: 100px;
@@ -17,20 +11,102 @@ p{
     text-align: justify;
     border-style: solid;
 }
-
+h1{
+    color: black;
+    padding-top: 140px;
+    font-size: 48px;
+    
+}
+h2{
+ color: black;
+ font-size: 40px;
+ text-decoration: none;
+ 
+}
 h3{
-    margin-top: 20px;
     text-align: center;
-    font-family: 'Bebas Neue', cursive;
+}
+#simbolo{
+    position: absolute; 
+    left: 850px; /* posiciona a 90px para a esquerda */ 
+    top: 140px; /* posiciona a 70px para baixo */
+    width: 220px;
+    right: 220px;
+}
+.itens{
+    margin-top: 20%;
+    display: flex;
+    justify-content: baseline;
+    left: 2%;
+}
+.itenNav{
+    margin-left: 6%;
+}
+#foto{
+    display: flex;
+    justify-content: center;
+}
+.texto{
+    margin-left: 10px;
+}
+#cadastro{
+    margin-left: 50%;
+}
+
+.footer {
+    display: flex;
+    justify-content: center ;
+}
+
+.social li a {
+    /*tamanho da imagem*/
+    height: 32px;
+    width: 32px;
+    /*image replamecent (substituição por imagem)*/
+    display: block;
+    text-indent: -9999px;
+  
+}
+
+.social a[href*="facebook.com"] {
+    background-image: url(../../assets/images/facebook.png);
+}
+
+.social a[href*="twitter.com"] {
+    background-image: url(../../assets/images/twitter.png);
+}
+
+.social a[href*="instagram.com"] {
+    background-image: url(../../assets/images/instagram.png);
+}
+
+ul {
+    list-style: none
+    }
+li{
+    display: inline
+}
+
+.social li {
+    float: left;
+    margin-left: 25px;
+}
+.kl{
+    text-align: center;
+}
+.social{
+    margin-left: 150px;
+}
+.nav-link{
+    color: black;
 }
 #botao{
-    margin-left: 8px;
-    text-align: center;
-}
-#bot{
-    margin-top: 10px;
+left: 105px;
 }
 
-span{
-    color:red;
+.titulo{
+    color: black;
+    text-decoration: none;
+    font-family: 'Quicksand', sans-serif;
+
 }
