--- a/src/app/contato/contato.component.html
+++ b/src/app/contato/contato.component.html
@@ -1,4 +1,27 @@
 <div class="row">
+    <div class="col-md-12">
+        <nav class="navbar navbar-expand-lg navbar-transparent ">
+
+                <a [routerLink]="'/home'" class="titulo"><strong><h2> Click<strong>In</strong> </h2> </strong></a>
+
+            <a class="nav-link" [routerLink]="'/quemsomos'">Quem Somos</a>
+            <a class="nav-link" [routerLink]="'/embaixadores'">Embaixadores </a>
+            <a class="nav-link" [routerLink]="'/faq'">FAQs</a>
+            
+            <a type="button" class="btn btn-link" id="cadastro" data-toggle="modal"
+                data-target="#modalCadastro">Cadastre-se</a>
+            <button type="button" data-toggle="modal" data-target="#modalExemplo"
+                class="btn btn-outline-dark">Entrar</button>
+        </nav>
+
+    </div>
+
+
+</div>
+
+
+
+<div class="row">
 
     <div class="col-md-12">
         <h3> Fale Conosco </h3>
@@ -16,7 +39,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <label for="validationTooltip01"> Nome Completo </label>
-                            <input type="text" class="form-control" placeholder="Digite o seu Nome Completo" value="" required [(ngModel)]="nomeCompleto" [ngModelOptions]="{standalone: true}">
+                            <input type="text" class="form-control" placeholder="Digite o seu Nome Completo" value=""
+                                required [(ngModel)]="nomeCompleto" [ngModelOptions]="{standalone: true}">
                             <span *ngIf='_msgErroNome'>{{_msgErroNome}}</span>
                         </div>
 
@@ -26,9 +50,10 @@
                     <div class="row mt-2">
                         <div class="col-md-12">
                             <label for="validationTooltip01"> Email </label>
-                            <input type="text" class="form-control" [(ngModel)]="email" [ngModelOptions]="{standalone: true}" placeholder="Digite o seu e-mail" value=""
+                            <input type="text" class="form-control" [(ngModel)]="email"
+                                [ngModelOptions]="{standalone: true}" placeholder="Digite o seu e-mail" value=""
                                 required>
-                                <span *ngIf='_msgErroEmail'>{{_msgErroEmail}}</span>
+                            <span *ngIf='_msgErroEmail'>{{_msgErroEmail}}</span>
                         </div>
 
                     </div>
@@ -36,9 +61,9 @@
                     <div class="row mt-2">
                         <div class="col-md-12">
                             <label for="validationTooltip04">Telefone</label>
-                            <input type="text" class="form-control" [(ngModel)]="telefone" [ngModelOptions]="{standalone: true}" placeholder="Digite o seu telefone"
-                                required>
-                                <span *ngIf='_msgErroTelefone'>{{_msgErroTelefone}}</span>
+                            <input type="text" class="form-control" [(ngModel)]="telefone"
+                                [ngModelOptions]="{standalone: true}" placeholder="Digite o seu telefone" required>
+                            <span *ngIf='_msgErroTelefone'>{{_msgErroTelefone}}</span>
                         </div>
                     </div>
 
@@ -46,7 +71,8 @@
                     <div class="row mt-2">
                         <div class="col-md-12">
                             <label for="exampleFormControlTextarea1">Mensagem</label>
-                            <textarea class="form-control" [(ngModel)]="mensagem" [ngModelOptions]="{standalone: true}" rows="3"></textarea>
+                            <textarea class="form-control" [(ngModel)]="mensagem" [ngModelOptions]="{standalone: true}"
+                                rows="3"></textarea>
                             <span *ngIf='_msgErroMensagem'>{{_msgErroMensagem}}</span>
                         </div>
                     </div>
@@ -65,3 +91,27 @@
                     </div>
                 </form>
             </div>
+
+            <hr>
+            <!--<footer class="footer">-->
+                    <div class="container mb-3">
+                            <div class="row">
+                                <div class="col-md-12 kl">
+                                    <div id="textorodape" class="navbar-text">
+                                        <strong>ClickIn&reg;</strong>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row ">
+            
+                                <div class="col-md-12 ">
+                                    <ul class="social ">
+                                        <li><a href="http://facebook.com/">Facebook</a></li>
+                                        <li><a href="https://twitter.com/">Twitter</a></li>
+                                        <li><a href="http://instagram.com/">Instagram</a></li>
+                                    </ul>
+            
+                                </div>
+                            </div>
+                        </div>
+                        <!--</footer>-->
