--- a/src/app/quemsomos/quemsomos.component.css
+++ b/src/app/quemsomos/quemsomos.component.css
@@ -1,18 +1,6 @@
 #paragrafo{
     text-align: center;
 }
-
-.footer {
-    
-    
-    width: 100%;
-    background-color: rgb(42, 63, 50);
-    color:whitesmoke;
-    text-align: center;
-    opacity: 10% ;
-    
-    
-}
 p{
     text-align: justify;
 }
@@ -36,19 +24,6 @@ h2{
     text-align: center;
 }
 
-.footer {
-    
-
-    left: 0%;
-    bottom: 0;
-    width: 100%;
-    
-    background-color: white;
-    color:black;
-    text-align: center;
-    opacity: 100%
-   
-}
 
 p{
     text-align:center;
@@ -79,8 +54,10 @@ h3{
     font-family: 'Bebas Neue', cursive;
 }
 h2{
-    font-family: 'Bebas Neue', cursive;
-}
+    color: black;
+    font-size: 40px;
+    text-decoration: none;
+   }
 #botao{
     margin-left: 8px;
     
@@ -147,3 +124,61 @@ h2{
     text-align-last: center;
     transform: rotateY(180deg);
   } 
+
+  /* Estiliza o Footer*/
+
+
+
+.social li a {
+    /*tamanho da imagem*/
+    height: 32px;
+    width: 32px;
+    /*image replamecent (substituição por imagem)*/
+    display: block;
+    text-indent: -9999px;
+  
+}
+
+.social a[href*="facebook.com"] {
+    background-image: url(../../assets/images/facebook.png);
+}
+
+.social a[href*="twitter.com"] {
+    background-image: url(../../assets/images/twitter.png);
+}
+
+.social a[href*="instagram.com"] {
+    background-image: url(../../assets/images/instagram.png);
+}
+
+ul {
+    list-style: none;
+    }
+
+li{
+    display: inline
+}
+
+.social li {
+    float: left;
+    margin-left: 25px;
+}
+.kl{
+    text-align: center;
+}
+.social{
+    margin-left: 415px;
+}
+.nav-link{
+    color: black;
+}
+#cadastro{
+    margin-left: 50%;
+}
+
+.titulo{
+    color: black;
+    text-decoration: none;
+    font-family: 'Quicksand', sans-serif;
+
+}
