--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,18 +10,15 @@
         <nav class="navbar navbar-expand-lg navbar-transparent ">
 
             <a [routerLink]="'/home'" class="titulo"><strong>
-                    <h2> Click<strong>In</strong> </h2>
+                    <img src="/assets/images/logonew.png" id="logo">
                 </strong></a>
             <a class="navbar-brand" href="#"></a>
 
         </nav>
     </div>
 
-    <div class="col-md-2">
 
-    </div>
-
-    <div class="col-md-2">
+    <div class="col-md-5">
         <div class="col-md-4-mb-10 mt-3 itenNav">
             <nav class="nav nav-pills nav-fill">
                 <a type="button" class="btn btn-link" id="cadastro" data-toggle="modal"
@@ -130,16 +127,18 @@ aria-hidden="true">
 </div>
 </div>
 
+<div>
 
-
-<div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-6 d-flex justify-content-center txt" id="texto">
-        <h1>Bem-Vindo à sua comunidade de inclusão profissional</h1>
+<div class="row mt-5">
+    <div class="col-md-7 " id="texto">
+        <h1 class="display-3 d-flex justify-content-end ">Bem-Vindxs à sua <br>
+          comunidade de inclusão profissional</h1> 
     </div>
 
-    <img src="../../assets/images/acessibilidade.png" id="simbolo">
+    <div class="col-md-4 aling-item-center">
+        <img src="../../assets/images/inclusao.png" id="simbolo">
 
+    </div>
 </div>
 
 
@@ -153,4 +152,13 @@ aria-hidden="true">
         </nav>
     </div>
     <div class="col-md-4"></div>
+</div>
+
+
+<div class="jumbotron jumbotron-fluid fundo" id="">
+  <div class="container" id="">
+    <h1 class="display-4  p-0 ">Sobre nós</h1> 
+    <p class="lead"> O ClickIn é uma rede que tem como foco estimular a inclusão de PCD’s no mercado de trabalho, para facilitar o acesso a informações e atualidades do meio. 
+    Viabilizar a conexão entre empregadores e profissionais PCDs da-se na busca por mapear e entender quais são as necessidades e requisitos para incluir essa população nas empresas. A partir de entrevistas e pesquisas, foram coletadas histórias, impressões, dados sobre esse público. Num segundo momento, como parte do projeto, vídeos foram gravados para dar visibilidade a história dos nossos embaixadores que exemplificam os desafios dos profissionais a ingressar no mercado. O objetivo do projeto é, de um lado, mostrar como à falta de inclusão e representatividade, e também estimular referências positivas..</p>
+  </div>
 </div>
