--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -127,35 +127,34 @@ aria-hidden="true">
 </div>
 </div>
 
-<div>
+
+
 
 <div class="row mt-5">
-    <div class="col-md-7 " id="texto">
+    <div class="col" id="texto">
+      <div class="row tamanho">
+      </div>
         <h1 class="display-3 d-flex justify-content-end ">Bem-Vindxs à sua <br>
           comunidade de inclusão profissional</h1> 
+          <div class="row">
+            <div class="col-md-9" id="navbaixo">
+                <nav class="navbar navbar-expand-lg navbar-transparent ">
+                    <a class="nav-link" [routerLink]="'/quemsomos'">Quem Somos</a><strong>|</strong>
+                    <a class="nav-link" [routerLink]="'/contato'">Contato </a><strong>|</strong>
+                    <a class="nav-link" [routerLink]="'/embaixadores'">Embaixadores </a><strong>|</strong>
+                    <a class="nav-link" [routerLink]="'/faq'">FAQs</a>
+                </nav>
+                </div>
+        </div>
     </div>
-
-    <div class="col-md-4 aling-item-center">
-        <img src="../../assets/images/inclusao.png" id="simbolo">
-
+    
+    <div class="col">
+        <img src="../../assets/images/inclusao.png" id="simbolo" title="imagem cadeira de rodas colorida" alt="imagem cadeira de rodas colorida">
     </div>
 </div>
 
 
-<div class="row">
-    <div class="col-md-8" id="navbaixo">
-        <nav class="navbar navbar-expand-lg navbar-transparent ">
-            <a class="nav-link" [routerLink]="'/quemsomos'">Quem Somos</a><strong>|</strong>
-            <a class="nav-link" [routerLink]="'/contato'">Contato </a><strong>|</strong>
-            <a class="nav-link" [routerLink]="'/embaixadores'">Embaixadores </a><strong>|</strong>
-            <a class="nav-link" [routerLink]="'/faq'">FAQs</a>
-        </nav>
-    </div>
-    <div class="col-md-4"></div>
-</div>
-
-
-<div class="jumbotron jumbotron-fluid fundo" id="">
+<div class="jumbotron jumbotron-fluid fundo" >
   <div class="container" id="">
     <h1 class="display-4  p-0 ">Sobre nós</h1> 
     <p class="lead"> O ClickIn é uma rede que tem como foco estimular a inclusão de PCD’s no mercado de trabalho, para facilitar o acesso a informações e atualidades do meio. 
