alteracoes no site

--- a/src/app/embaixadores/embaixadores.component.html
+++ b/src/app/embaixadores/embaixadores.component.html
@@ -26,9 +26,9 @@
         <div class="col-md-6" >
                 <div class="card-body" id="texto">
                   <h4>Nossas inspirações</h4> <br>
-                  <p>Escolhemos o Roberto Gonzaga, Eliane Barbosa e Thiago para trocar uma ideia sobre a criação e funcionalidade do nosso projeto. Esse conversa foi essencial para a formação e planejamento do Clickin. </p>
+                  <p>Conversamos com a Mariana Neres, Cássia Regina, Thiago Cardoso, Thiago Demiquele e João Marinho para viabilizar a criação e funcionalidade do nosso projeto. Essa troca foi essencial para a formação e planejamento do Clickin. </p>
                 <p> Conhecer a realidade vivenciada pelos PCD's no processo de inclusão no mercado de trabalho foi nossa primeira missão para conseguir formar a Rede social com funcionalidade.  </p>
-                <p> Nosso agradecimento especial a Roberto, Eliane e Thiago e os demais amigos IOS que apoiaram ideia.</p>
+                <p> Nosso agradecimento especial à Mariana, Cassia, Thiago, João e os demais amigos e professores que apoiaram a nossa ideia.</p>
                 </div>
         </div>
               
