--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,4 @@
 
-
 h1{
     color: black;
     
@@ -16,13 +15,6 @@ h1{
 
 }
 
-#sessao1{
-    margin-top: 120px;
-}
-
-.fundo{
-    margin-top: 220px;
-}
 
 #simbolo{
 
@@ -75,12 +67,33 @@ body{
 }
 
 .fundo{
-    background: #007EF9;
+  
+    
+    background-image: linear-gradient(to bottom right, rgba(95, 95, 255, 0.705), rgba(208, 208, 235, 0.788));
+    margin-top: 120px;   
 }
+
 .tamanho{
     height: 100px;
 }
 
+.lead{
+    color:black;
+    font-family: 'Quicksand', sans-serif;
+    text-align: justify;
+}
 
-  
+#carouselExampleIndicators{
+    text-align: center;
+}
+
+.carousel-item{
+    height: 400px;
+}
+
+#labelNossoTime{
+    margin-left: 8.5%;
+}
+
+
  
