--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -155,9 +155,44 @@ aria-hidden="true">
 
 
 <div class="jumbotron jumbotron-fluid fundo" >
-  <div class="container" id="">
-    <h1 class="display-4  p-0 ">Sobre nós</h1> 
+  <div class="container">
+    <h1 class="display-4  p-0 mb-4 ">Sobre nós</h1> 
     <p class="lead"> O ClickIn é uma rede que tem como foco estimular a inclusão de PCD’s no mercado de trabalho, para facilitar o acesso a informações e atualidades do meio. 
-    Viabilizar a conexão entre empregadores e profissionais PCDs da-se na busca por mapear e entender quais são as necessidades e requisitos para incluir essa população nas empresas. A partir de entrevistas e pesquisas, foram coletadas histórias, impressões, dados sobre esse público. Num segundo momento, como parte do projeto, vídeos foram gravados para dar visibilidade a história dos nossos embaixadores que exemplificam os desafios dos profissionais a ingressar no mercado. O objetivo do projeto é, de um lado, mostrar como à falta de inclusão e representatividade, e também estimular referências positivas..</p>
+    Viabilizar a conexão entre empregadores e profissionais PCDs da-se na busca por mapear e entender quais são as necessidades e requisitos para incluir essa população nas empresas. A partir de entrevistas e pesquisas, foram coletadas histórias, impressões, dados sobre esse público. Num segundo momento, como parte do projeto, vídeos foram gravados para dar visibilidade a história dos nossos embaixadores que exemplificam os desafios dos profissionais a ingressar no mercado. O objetivo do projeto é, de um lado, mostrar como à falta de inclusão e representatividade, e também estimular referências positivas.</p>
   </div>
+</div>
+
+
+<h1 class="display-4  p-0 mb-4 " id="labelNossoTime">Nosso Time</h1> 
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img  src="../../assets/images/1.png" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img  src="../../assets/images/2.png" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img  src="../../assets/images/3.png" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img  src="../../assets/images/4.png" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img  src="../../assets/images/5.png" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
